UTC time to local, fix padding breaking on certain screensize, fix gap in media queries

--- a/css/home.css
+++ b/css/home.css
@@ -159,12 +159,13 @@ form li:hover {
 
   .day-input {
     font-size: .75em;
-    padding: 1em 2em 1em 2em;
-    color: var(--clr-dark);
+    padding: .5em 1em;
+    /* color: var(--clr-dark); */
     border: 0;
     border-radius: 1em;
     width: fit-content;
     margin: 0 auto;
+    margin-bottom: 15px;
   }
 
 }
